chore: bump plugin-api to 4.1.9